<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center_horizontal"
tools:context="com.faroanalytics.lorange.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/standardFontColor"
        android:fontFamily="sans-serif-thin"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="130dip"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/login_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/standardFontColor"
        android:fontFamily="sans-serif-thin"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="6dp"
        android:textSize="17sp"
        android:gravity="center"
        android:text="@string/login_slogan"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layoutBackgroundColor"
        android:textColor="@color/standardFontColor"
        android:fontFamily="sans-serif-thin"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:hint="@string/login_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layoutBackgroundColor"
        android:textColor="@color/standardFontColor"
        android:fontFamily="sans-serif-thin"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="16sp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:hint="@string/login_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/small_button"
        android:textColor="@color/buttonFontColor"
        android:fontFamily="sans-serif-thin"
        android:layout_margin="6dp"
        android:text="@string/login_login"
        android:id="@+id/bLogin" />

</LinearLayout>

